interprete2024/target/generated-sources/antlr4/com/compiladores/practica1/interprete2024/JPellateParser.java
// Generated from com/compiladores/practica1/interprete2024/JPellate.g4 by ANTLR 4.5.1
package com.compiladores.practica1.interprete2024;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JPellateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		P_GRUPO=1, P_VAR=2, P_S=3, P_E=4, P_IF=5, P_ELSE_IF=6, P_ELSE=7, P_SW=8, 
		P_OTRO=9, P_END=10, P_DEF=11, P_WHILE=12, P_FOR=13, P_FC=14, P_AND=15, 
		P_OR=16, P_S_OPERACION=17, P_S_NEGACION=18, P_S_DE_COMPA=19, S_ASI=20, 
		S_DO=21, P_A=22, P_C=23, P_COR_A=24, P_COR_C=25, P_LL_A=26, P_LL_C=27, 
		P_PUN_P_COMA=28, P_COMA=29, P_REGRESAR=30, P_COMILLAS=31, P_IDENTIFICADORES=32, 
		P_TEXTO=33, P_NUMERO=34, WS=35;
	public static final int
		RULE_start = 0, RULE_inicio = 1, RULE_v_asignar = 2, RULE_v_asignar_valor_P_NUMERO = 3, 
		RULE_v_asignar_valor_P_TEXTO = 4, RULE_c_s_P_TEXTO = 5, RULE_c_s_variable = 6, 
		RULE_c_s_combinado = 7, RULE_c_e_nuevo = 8, RULE_c_e_viejo = 9, RULE_if_unitario = 10, 
		RULE_if_else = 11, RULE_if_elseif = 12, RULE_elseif = 13, RULE_sw_switch = 14, 
		RULE_otro = 15, RULE_otro_P_TEXTO = 16, RULE_otro_P_NUMERO = 17, RULE_ciclo_while = 18, 
		RULE_ciclo_for = 19, RULE_rango = 20, RULE_rango_P_NUMERO = 21, RULE_rango_v_iz = 22, 
		RULE_rango_v_de = 23, RULE_rango_v = 24, RULE_funciones_p = 25, RULE_funcion_nr_vacio = 26, 
		RULE_funcion_nr_variables = 27, RULE_funcion_sr_vacio = 28, RULE_funcion_sr_variables = 29, 
		RULE_rtr = 30, RULE_vrt = 31, RULE_condicional = 32, RULE_c_normal = 33, 
		RULE_c_normal_and = 34, RULE_c_normal_or = 35, RULE_c_P_TEXTO = 36, RULE_c_P_TEXTO_iz = 37, 
		RULE_c_P_TEXTO_de = 38, RULE_c_num_iz = 39, RULE_c_num_de = 40;
	public static final String[] ruleNames = {
		"start", "inicio", "v_asignar", "v_asignar_valor_P_NUMERO", "v_asignar_valor_P_TEXTO", 
		"c_s_P_TEXTO", "c_s_variable", "c_s_combinado", "c_e_nuevo", "c_e_viejo", 
		"if_unitario", "if_else", "if_elseif", "elseif", "sw_switch", "otro", 
		"otro_P_TEXTO", "otro_P_NUMERO", "ciclo_while", "ciclo_for", "rango", 
		"rango_P_NUMERO", "rango_v_iz", "rango_v_de", "rango_v", "funciones_p", 
		"funcion_nr_vacio", "funcion_nr_variables", "funcion_sr_vacio", "funcion_sr_variables", 
		"rtr", "vrt", "condicional", "c_normal", "c_normal_and", "c_normal_or", 
		"c_P_TEXTO", "c_P_TEXTO_iz", "c_P_TEXTO_de", "c_num_iz", "c_num_de"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Grupo'", "'Variable'", "'Salida'", "'Entrada'", "'if'", "'else if'", 
		"'else'", "'Sw'", "'Otro'", "'end'", "'Def'", "'While'", "'For'", "'Funcion'", 
		"'AND'", "'OR'", null, "'!'", null, "'='", "'$'", "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "';'", "','", "'->'", "'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "P_GRUPO", "P_VAR", "P_S", "P_E", "P_IF", "P_ELSE_IF", "P_ELSE", 
		"P_SW", "P_OTRO", "P_END", "P_DEF", "P_WHILE", "P_FOR", "P_FC", "P_AND", 
		"P_OR", "P_S_OPERACION", "P_S_NEGACION", "P_S_DE_COMPA", "S_ASI", "S_DO", 
		"P_A", "P_C", "P_COR_A", "P_COR_C", "P_LL_A", "P_LL_C", "P_PUN_P_COMA", 
		"P_COMA", "P_REGRESAR", "P_COMILLAS", "P_IDENTIFICADORES", "P_TEXTO", 
		"P_NUMERO", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JPellate.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JPellateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode P_GRUPO() { return getToken(JPellateParser.P_GRUPO, 0); }
		public TerminalNode P_IDENTIFICADORES() { return getToken(JPellateParser.P_IDENTIFICADORES, 0); }
		public TerminalNode P_LL_A() { return getToken(JPellateParser.P_LL_A, 0); }
		public TerminalNode P_LL_C() { return getToken(JPellateParser.P_LL_C, 0); }
		public List<InicioContext> inicio() {
			return getRuleContexts(InicioContext.class);
		}
		public InicioContext inicio(int i) {
			return getRuleContext(InicioContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JPellateVisitor ) return ((JPellateVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(P_GRUPO);
			setState(83);
			match(P_IDENTIFICADORES);
			setState(84);
			match(P_LL_A);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << P_VAR) | (1L << P_S) | (1L << P_IF) | (1L << P_SW) | (1L << P_WHILE) | (1L << P_FOR) | (1L << P_FC) | (1L << P_IDENTIFICADORES))) != 0)) {
				{
				{
				setState(85);
				inicio();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(P_LL_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InicioContext extends ParserRuleContext {
		public V_asignarContext v_asignar() {
			return getRuleContext(V_asignarContext.class,0);
		}
		public V_asignar_valor_P_NUMEROContext v_asignar_valor_P_NUMERO() {
			return getRuleContext(V_asignar_valor_P_NUMEROContext.class,0);
		}
		public V_asignar_valor_P_TEXTOContext v_asignar_valor_P_TEXTO() {
			return getRuleContext(V_asignar_valor_P_TEXTOContext.class,0);
		}
		public C_s_P_TEXTOContext c_s_P_TEXTO() {
			return getRuleContext(C_s_P_TEXTOContext.class,0);
		}
		public C_s_variableContext c_s_variable() {
			return getRuleContext(C_s_variableContext.class,0);
		}
		public C_s_combinadoContext c_s_combinado() {
			return getRuleContext(C_s_combinadoContext.class,0);
		}
		public C_e_nuevoContext c_e_nuevo() {
			return getRuleContext(C_e_nuevoContext.class,0);
		}
		public C_e_viejoContext c_e_viejo() {
			return getRuleContext(C_e_viejoContext.class,0);
		}
		public If_unitarioContext if_unitario() {
			return getRuleContext(If_unitarioContext.class,0);
		}
		public If_elseContext if_else() {
			return getRuleContext(If_elseContext.class,0);
		}
		public If_elseifContext if_elseif() {
			return getRuleContext(If_elseifContext.class,0);
		}
		public Sw_switchContext sw_switch() {
			return getRuleContext(Sw_switchContext.class,0);
		}
		public Ciclo_whileContext ciclo_while() {
			return getRuleContext(Ciclo_whileContext.class,0);
		}
		public Ciclo_forContext ciclo_for() {
			return getRuleContext(Ciclo_forContext.class,0);
		}
		public Funciones_pContext funciones_p() {
			return getRuleContext(Funciones_pContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JPellateVisitor ) return ((JPellateVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_inicio);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				v_asignar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				v_asignar_valor_P_NUMERO();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				v_asignar_valor_P_TEXTO();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				c_s_P_TEXTO();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				c_s_variable();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				c_s_combinado();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				c_e_nuevo();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(100);
				c_e_viejo();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(101);
				if_unitario();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(102);
				if_else();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(103);
				if_elseif();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(104);
				sw_switch();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(105);
				ciclo_while();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(106);
				ciclo_for();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(107);
				funciones_p();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V_asignarContext extends ParserRuleContext {
		public TerminalNode P_VAR() { return getToken(JPellateParser.P_VAR, 0); }
		public TerminalNode P_IDENTIFICADORES() { return getToken(JPellateParser.P_IDENTIFICADORES, 0); }
		public TerminalNode P_PUN_P_COMA() { return getToken(JPellateParser.P_PUN_P_COMA, 0); }
		public V_asignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v_asignar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).enterV_asignar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).exitV_asignar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JPellateVisitor ) return ((JPellateVisitor<? extends T>)visitor).visitV_asignar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V_asignarContext v_asignar() throws RecognitionException {
		V_asignarContext _localctx = new V_asignarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_v_asignar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(P_VAR);
			setState(111);
			match(P_IDENTIFICADORES);
			setState(112);
			match(P_PUN_P_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V_asignar_valor_P_NUMEROContext extends ParserRuleContext {
		public TerminalNode P_VAR() { return getToken(JPellateParser.P_VAR, 0); }
		public TerminalNode P_IDENTIFICADORES() { return getToken(JPellateParser.P_IDENTIFICADORES, 0); }
		public TerminalNode S_ASI() { return getToken(JPellateParser.S_ASI, 0); }
		public TerminalNode P_NUMERO() { return getToken(JPellateParser.P_NUMERO, 0); }
		public TerminalNode P_PUN_P_COMA() { return getToken(JPellateParser.P_PUN_P_COMA, 0); }
		public V_asignar_valor_P_NUMEROContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v_asignar_valor_P_NUMERO; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).enterV_asignar_valor_P_NUMERO(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).exitV_asignar_valor_P_NUMERO(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JPellateVisitor ) return ((JPellateVisitor<? extends T>)visitor).visitV_asignar_valor_P_NUMERO(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V_asignar_valor_P_NUMEROContext v_asignar_valor_P_NUMERO() throws RecognitionException {
		V_asignar_valor_P_NUMEROContext _localctx = new V_asignar_valor_P_NUMEROContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_v_asignar_valor_P_NUMERO);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(P_VAR);
			setState(115);
			match(P_IDENTIFICADORES);
			setState(116);
			match(S_ASI);
			setState(117);
			match(P_NUMERO);
			setState(118);
			match(P_PUN_P_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V_asignar_valor_P_TEXTOContext extends ParserRuleContext {
		public TerminalNode P_VAR() { return getToken(JPellateParser.P_VAR, 0); }
		public List<TerminalNode> P_IDENTIFICADORES() { return getTokens(JPellateParser.P_IDENTIFICADORES); }
		public TerminalNode P_IDENTIFICADORES(int i) {
			return getToken(JPellateParser.P_IDENTIFICADORES, i);
		}
		public TerminalNode S_ASI() { return getToken(JPellateParser.S_ASI, 0); }
		public List<TerminalNode> P_COMILLAS() { return getTokens(JPellateParser.P_COMILLAS); }
		public TerminalNode P_COMILLAS(int i) {
			return getToken(JPellateParser.P_COMILLAS, i);
		}
		public TerminalNode P_PUN_P_COMA() { return getToken(JPellateParser.P_PUN_P_COMA, 0); }
		public V_asignar_valor_P_TEXTOContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v_asignar_valor_P_TEXTO; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).enterV_asignar_valor_P_TEXTO(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).exitV_asignar_valor_P_TEXTO(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JPellateVisitor ) return ((JPellateVisitor<? extends T>)visitor).visitV_asignar_valor_P_TEXTO(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V_asignar_valor_P_TEXTOContext v_asignar_valor_P_TEXTO() throws RecognitionException {
		V_asignar_valor_P_TEXTOContext _localctx = new V_asignar_valor_P_TEXTOContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_v_asignar_valor_P_TEXTO);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(P_VAR);
			setState(121);
			match(P_IDENTIFICADORES);
			setState(122);
			match(S_ASI);
			setState(123);
			match(P_COMILLAS);
			setState(124);
			match(P_IDENTIFICADORES);
			setState(125);
			match(P_COMILLAS);
			setState(126);
			match(P_PUN_P_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class C_s_P_TEXTOContext extends ParserRuleContext {
		public TerminalNode P_S() { return getToken(JPellateParser.P_S, 0); }
		public TerminalNode P_COR_A() { return getToken(JPellateParser.P_COR_A, 0); }
		public List<TerminalNode> P_COMILLAS() { return getTokens(JPellateParser.P_COMILLAS); }
		public TerminalNode P_COMILLAS(int i) {
			return getToken(JPellateParser.P_COMILLAS, i);
		}
		public TerminalNode P_IDENTIFICADORES() { return getToken(JPellateParser.P_IDENTIFICADORES, 0); }
		public TerminalNode P_COR_C() { return getToken(JPellateParser.P_COR_C, 0); }
		public TerminalNode P_PUN_P_COMA() { return getToken(JPellateParser.P_PUN_P_COMA, 0); }
		public C_s_P_TEXTOContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_s_P_TEXTO; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).enterC_s_P_TEXTO(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).exitC_s_P_TEXTO(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JPellateVisitor ) return ((JPellateVisitor<? extends T>)visitor).visitC_s_P_TEXTO(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_s_P_TEXTOContext c_s_P_TEXTO() throws RecognitionException {
		C_s_P_TEXTOContext _localctx = new C_s_P_TEXTOContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_c_s_P_TEXTO);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(P_S);
			setState(129);
			match(P_COR_A);
			setState(130);
			match(P_COMILLAS);
			setState(131);
			match(P_IDENTIFICADORES);
			setState(132);
			match(P_COMILLAS);
			setState(133);
			match(P_COR_C);
			setState(134);
			match(P_PUN_P_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class C_s_variableContext extends ParserRuleContext {
		public TerminalNode P_S() { return getToken(JPellateParser.P_S, 0); }
		public TerminalNode P_COR_A() { return getToken(JPellateParser.P_COR_A, 0); }
		public TerminalNode P_IDENTIFICADORES() { return getToken(JPellateParser.P_IDENTIFICADORES, 0); }
		public TerminalNode P_COR_C() { return getToken(JPellateParser.P_COR_C, 0); }
		public TerminalNode P_PUN_P_COMA() { return getToken(JPellateParser.P_PUN_P_COMA, 0); }
		public C_s_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_s_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).enterC_s_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).exitC_s_variable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JPellateVisitor ) return ((JPellateVisitor<? extends T>)visitor).visitC_s_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_s_variableContext c_s_variable() throws RecognitionException {
		C_s_variableContext _localctx = new C_s_variableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_c_s_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(P_S);
			setState(137);
			match(P_COR_A);
			setState(138);
			match(P_IDENTIFICADORES);
			setState(139);
			match(P_COR_C);
			setState(140);
			match(P_PUN_P_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class C_s_combinadoContext extends ParserRuleContext {
		public TerminalNode P_S() { return getToken(JPellateParser.P_S, 0); }
		public TerminalNode P_COR_A() { return getToken(JPellateParser.P_COR_A, 0); }
		public List<TerminalNode> P_COMILLAS() { return getTokens(JPellateParser.P_COMILLAS); }
		public TerminalNode P_COMILLAS(int i) {
			return getToken(JPellateParser.P_COMILLAS, i);
		}
		public List<TerminalNode> P_IDENTIFICADORES() { return getTokens(JPellateParser.P_IDENTIFICADORES); }
		public TerminalNode P_IDENTIFICADORES(int i) {
			return getToken(JPellateParser.P_IDENTIFICADORES, i);
		}
		public TerminalNode S_DO() { return getToken(JPellateParser.S_DO, 0); }
		public TerminalNode P_COR_C() { return getToken(JPellateParser.P_COR_C, 0); }
		public TerminalNode P_PUN_P_COMA() { return getToken(JPellateParser.P_PUN_P_COMA, 0); }
		public C_s_combinadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_s_combinado; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).enterC_s_combinado(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JPellateListener ) ((JPellateListener)listener).exitC_s_combinado(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JPellateVisitor ) return ((JPellateVisitor<? extends T>)visitor).visitC_s_combinado(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_s_combinadoContext c_s_combinado() throws RecognitionException {
		C_s_combinadoContext _localctx = new C_s_combinadoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_c_s_combinado);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(P_S);
			setState(143);
			match(P_COR_A);
			setState(144);
			match(P_COMILLAS);
			setState(145);
			match(P_IDENTIFICADORES);
			setState(146);
			match(P_COMILLAS);
			setState(147);
			match(S_DO);
			setState(148);
			match(P_IDENTIFICADORES);
			setState(149);
			match(P_COR_C);
			setState(150);
			match(P_PUN_P_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
